--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="game.js" async></script>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 <body>
     <div class="bg-img">
